--- a/student_management_app/templates/hod_template/footer.html
+++ b/student_management_app/templates/hod_template/footer.html
@@ -1,6 +1,7 @@
  <footer class="main-footer">
-     <strong>Created by <a href="vk.com/pjd00">Latyshonak D.A.</a>.</strong>
+     <strong>Created by Latyshonak D.A.</strong>
     <div class="float-right d-none d-sm-inline-block">
+        <strong> <a href="/contacts">Contacts</a></strong>
       <b>Version</b> 1.0
     </div>
   </footer>
